// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterCapacityTableMappedProps adds rowsAfter and updates totalCapacity if has multiple seat types 1`] = `
Object {
  "independentCapacity": 20,
  "rowsAfter": Array [
    Object {
      "items": "(VIP,General Admission)",
      "label": "Assigned seating",
      "right": "40",
    },
  ],
  "sharedCapacity": "",
  "sharedTicketItems": "",
  "totalCapacity": 60,
}
`;

exports[`filterCapacityTableMappedProps adds rowsAfter and updates totalCapacity if hasSeats and layoutLocked are true 1`] = `
Object {
  "independentCapacity": 20,
  "rowsAfter": Array [
    Object {
      "items": "(VIP)",
      "label": "Assigned seating",
      "right": "20",
    },
  ],
  "sharedCapacity": "",
  "sharedTicketItems": "",
  "totalCapacity": 40,
}
`;
